fix: textbox too short for Events & Meetings

--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,10 @@ a, a:hover, a:visited {
     flex-direction: column;
 }
 
+#events h4 {
+    width: 1340px;
+}
+
 #hero-text {
     width: 600px;
     height: 600px;
